--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,22 @@ buildscript {
 }
 
 allprojects {
+    // Values set here will be overriden by AppVeyor, feel free to modify during development.
+    def buildVersionName = 'v0.5.2.0'
+    def buildVersionCode = 233
+
+    if (System.env.APPVEYOR_BUILD_VERSION != null) {
+        buildVersionName = "v${System.getenv('appveyor_build_version')}"
+    }
+
+    if (System.env.APPVEYOR_BUILD_NUMBER != null) {
+        // Split is necessary because PRs set the build number to "1234-something".
+        def parts = System.env.APPVEYOR_BUILD_NUMBER.split('-')
+        buildVersionCode = Integer.valueOf(parts[0])
+    }
     ext {
+        versionCode = buildVersionCode
+        versionName = buildVersionName
         templateRootPath = project(":edxp-core").projectDir.path + "/template_override/"
         templateSystemPath = templateRootPath + "/system/"
         templateSystemx86Path = templateRootPath + "/system_x86/"
